# plc_agent

./: .gitignore  pyproject.toml  requirements.txt
plc_agent/: .env.example
plc_agent/src/agent/: api_agent.py  base.py  client.py  planning.py
plc_agent/src/config/: config.yaml
plc_agent/src/core/: config_loader.py  models.py  settings.py
plc_agent/src/log/: logging_config.py
plc_agent/src/tool/: api_loader.py
plc_agent/src/validation/: compiler.py
test/compiler/: test.st  test_compiler.py
test/planning/: 1.0.0_first_prompt
test/retrieval/: test.py
