[project]
name = "plc_agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "jieba>=0.42.1",
    "pydantic-settings>=2.13.1",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "zai-sdk>=0.2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["plc_agent*"]
